# iree

./: .bazel_to_cmake.cfg.py  .bazelignore  .bazelrc  .clang-format  .dockerignore  .envrc.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .pylintrc  .yamllint.yml  1build-host.sh  1installpython.sh  2buildpythonbinding.sh  404.html  AUTHORS  BUDDY_GEMMINI_INTEGRATION.md  BUILD  BUILD.bazel  BUILD.oss  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CNAME  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  Gemfile  LICENSE  LIST_OF_LLVM_COMMITS  MAINTAINERS.md  MODULE.bazel  README.md  RELEASING.md  REMOTING-WIP.md  SUBMODULE_VERSIONS  (+64 more)
bindings/python/: BUILD  CMakeLists.txt  README.md  build_defs.bzl  build_defs.oss.bzl  build_requirements.txt  index.html  setup.py  setup_compiler.py.in  setup_runtime.py.in  setup_tools_core.py.in  setup_tools_tf.py.in
build_tools/: BUILD  BUILD.bazel  bazel_build.sh  manylinux_py_setup.py  size_breakdown.bloaty  sync.py
build_tools/android/: post_benchmarks_as_pr_comment.py  run_benchmarks.py  upload_benchmarks_to_dashboard.py
build_tools/bazel/: BUILD  BUILD.bazel  BZLMOD_LLVM.md  amdgpu_device_toolchain_repo.bzl  assert_empty_query.sh  azure_cache.py  bazel_toolchains.patch  build.sh  build_bindings.sh  build_core.sh  build_defs.bzl  build_defs.oss.bzl  build_tensorflow.sh  build_test_all.sh  cc_binary_benchmark.bzl  configure_bazel.py  deep_copy.bzl  default_compiler_plugins.bzl  enforce_glob.bzl  extension.bzl  extensions.bzl  install_bazelisk.sh  iree.bazelrc  iree_amdgpu_binary.bzl  iree_amdgpu_library.bzl  iree_bitcode_library.bzl  iree_bytecode_module.bzl  iree_c_module.bzl  iree_cc_fuzz.bzl  iree_cc_test.bzl  iree_check_test.bzl  iree_directory.bzl  iree_e2e_generated_runner_test.bzl  iree_e2e_matmul_test.bzl  iree_flatcc.bzl  iree_genrule.bzl  iree_hal_cts2_test_suite.bzl  iree_hal_cts_test_suite.bzl  iree_hal_executable.bzl  iree_lit_test.bzl  (+13 more)
build_tools/bazel_to_cmake/: bazel_to_cmake.py  bazel_to_cmake_converter.py  bazel_to_cmake_targets.py
build_tools/benchmark/: post_benchmarks_as_pr_comment.py  run_benchmarks_on_android.py  upload_benchmarks_to_dashboard.py
build_tools/benchmarks/: CMakeLists.txt  README.md  benchmark_config_tool.py  benchmark_helper.py  benchmark_helper_test.py  benchmark_user_tool.py  collect_compilation_statistics.py  collect_compilation_statistics_from_host.py  collect_compilation_statistics_test.py  compile_benchmarks.py  diff_local_benchmarks.py  export_benchmark_config.py  export_benchmark_config_test.py  generate_benchmark_comment.py  generate_cmake_benchmark_suite.py  generate_cmake_benchmark_suites.py  iree_generated_benchmark_suite_template.cmake  iree_generated_benchmark_suites_template.cmake  post_benchmark_comment.py  post_benchmark_comment_test.py  post_benchmarks_as_pr_comment.py  run_benchmarks.sh  run_benchmarks_on_android.py  run_benchmarks_on_linux.py  set_adreno_gpu_scaling_policy.sh  set_android_scaling_governor.sh  set_pixel6_gpu_scaling_policy.sh  set_pixel_gpu_scaling_policy.sh  set_pixel_scaling_governor.sh  trigger_db_import.sh  upload_benchmarks_to_dashboard.py
build_tools/buildkite/: README.md  authorized_user_emails.txt  block_step.yml  check_cla.py  check_user_auth.py  check_user_auth.sh  cla_failure.yml  postsubmit.yml  postsubmit_bootstrap.yml  presubmit.yml  presubmit_bootstrap.yml  samples.yml  wait_for_pipeline_success.py
build_tools/ccache/: edit_fuse_connection.py  fuse_connection.yaml  install_ccache.sh
build_tools/ci/: build_linux_packages.sh
build_tools/cmake/: CMakeLists.txt  CTestCustom.cmake.in  IREECompilerConfig.cmake.in  IREERuntimeConfig.cmake.in  README.md  bazel.bat.in  bazel.sh.in  benchmark_compilation_flagfile.in  build.sh  build_all.sh  build_and_test_asan.sh  build_and_test_byo_llvm.sh  build_and_test_tsan.sh  build_and_test_ubsan.sh  build_android.sh  build_android_benchmark.sh  build_benchmarks.sh  build_docs.sh  build_e2e_test_artifacts.sh  build_host_and_android.sh  build_host_and_riscv.sh  build_host_install.sh  build_host_tools.sh  build_linux.sh  build_linux_benchmark.sh  build_linux_benchmark_modules.sh  build_linux_benchmark_tools.sh  build_riscv.sh  build_riscv_linux.sh  build_runtime.sh  build_runtime_emscripten.sh  build_runtime_small.sh  build_runtime_tracing.sh  build_tf_binaries.sh  build_tracing.sh  build_tsan.sh  clean_build.sh  cmake_ci.py  cmake_configure_ci.py  cmake_filegroup.cmake  (+122 more)
build_tools/docker/: README.md  build_and_update_gcr.py  docker_run.sh  gcloud_setup.sh  get_image_name.py  image_deps.json  (+6 more)
compiler/: .clang-format  .clang-tidy  BUILD.bazel  CMakeLists.txt  README.md  lit.cfg.py  lit.site.cfg.py  lit.site.cfg.py.in  pyproject.toml  setup.py  version.json
iree/: BUILD  BUILD.bazel  CMakeLists.txt  build_defs.bzl  build_defs.oss.bzl  iree.natvis  lit.cfg.py  lit_test.bzl
lib/: BUILD  BUILD.bazel
partitioner/: BUILD  BUILD.bazel
runtime/: CMakeLists.txt  README.md  iree.natvis  lit.cfg.py  pyproject.toml  setup.py  version.json
samples/: BUILD  CMakeLists.txt  README.md  lit.cfg.py
tools/: .clang-tidy  BUILD  BUILD.bazel  CMakeLists.txt  benchmark_module.cc  build_config_template.txt.in  compilation.bzl  iree-as-module-main.c  iree-benchmark-executable-main.c  iree-benchmark-module-main.cc  iree-benchmark-replay-main.cc  iree-benchmark-trace-main.c  iree-check-module-main.cc  iree-compile-main.cc  iree-convert-parameters-main.c  iree-cpuinfo.c  iree-create-parameters-main.c  iree-dump-instruments-main.c  iree-dump-module-main.c  iree-dump-parameters-main.c  iree-dump-replay-main.c  iree-dump-slfb-main.cc  iree-e2e-matmul-test.c  iree-e2e-matmul-test.cc  iree-encode-parameters-main.c  iree-fatelf.c  iree-link-main.cc  iree-lld-main.cc  iree-minimal-invoke-module-main.c  iree-mlir-lsp-server.cc  iree-opt-main.cc  iree-profile-att.c  iree-profile-att.h  iree-profile-main.c  iree-profile-render  iree-reduce.cc  iree-run-mlir-main.cc  iree-run-module-main.c  iree-run-module-main.cc  iree-run-replay-main.c  (+10 more)
(+21502 files in other folders)
